--- a/css/component.css
+++ b/css/component.css
@@ -143,12 +143,12 @@ button.slider-switch:hover {
 
 	display: inline-block;
 	position: relative;
-	height: 100%;
+	height: 100%; 
 	background: #567076;
 	font-size: 16px;
 	white-space: normal;
-	cursor: -webkit-grab; 
-	cursor: -moz-grab;
+	/*cursor: -webkit-grab; */
+	/*cursor: -moz-grab; */
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -165,8 +165,8 @@ button.slider-switch:hover {
 }
 
 .img-dragger .slide:active {
-	cursor: -webkit-grabbing; 
-	cursor: -moz-grabbing;
+/*	cursor: -webkit-grabbing; */
+	/*cursor: -moz-grabbing; */
 }
 
 .img-wrap {
@@ -297,12 +297,17 @@ button.content-switch::before {
 .show-content .current button.content-switch {
 	border-color: #c5d3d6;
 	color: #c5d3d6;
-	-webkit-transform: translate3d(-50%,100%,0);
-	transform: translate3d(-50%,100%,0);
+	-webkit-transform: translate3d(-50%,200%,0);
+	transform: translate3d(-50%,200%,0);
+}
+
+.show-content .current button.content-switch{
+	/*margin-top: 70px;*/
 }
 
 .show-content .current button.content-switch::before {
 	content: '\e096';
+
 }
 
 /* Content */
