fixed navbar bugs

--- a/css/component.css
+++ b/css/component.css
@@ -465,3 +465,35 @@ button.content-switch::before {
 		display: none;
 	}
 }
+
+/* ================================== */
+
+.handle .menu {
+        position: fixed;
+        width: 100%;
+        margin: 0;
+        /*padding: 10px 15px;*/
+        height: 4em;
+       	background-color: rgba( 233, 235, 238, 0.1);
+        color: #666;
+        cursor: default;
+        z-index: 1000;
+      }
+
+.menu a{
+	padding-top: 25px;
+    display:inline-block;
+    color:rgba(255,255,255,1.0);
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    line-height:5px;
+    margin:0px 32px; /*TODO*/
+   
+}  
+
+.menu a:hover{ 
+    text-decoration:none;
+    color: #e62b1e;
+}
+   
