--- a/css/necessary_bootstrap.css
+++ b/css/necessary_bootstrap.css
@@ -62,7 +62,7 @@ summary {
 }
 .nav > li {
   position: relative;
-  display: block;
+  display: inline-block;
 }
 .nav > li > a {
   position: relative;
@@ -309,6 +309,8 @@ summary {
 }
 .navbar-nav {
   margin: 7.5px -15px;
+  width: 100%;
+    text-align: center;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
@@ -322,7 +324,8 @@ summary {
     margin: 0;
   }
   .navbar-nav > li {
-    float: left;
+    float: initial;
+      line-height: 150px;
   }
   .navbar-nav > li > a {
     padding-top: 15px;
