--- a/css/test.css
+++ b/css/test.css
@@ -704,7 +704,7 @@ body input ~ div .new_section {
 	font-weight: 200;
 	letter-spacing: 1px;
     text-align: center; 
-	margin-top: 125px;
+	margin-top: 5%;
 	padding: 0;
 	opacity: 0;
 	transition: 0.5s ease-in-out 0.6s;
