--- a/css/team.css
+++ b/css/team.css
@@ -60,21 +60,134 @@ header .intro-text .skills {
 
 
 .row {
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 90%; /* change this */
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 .image-holder {
     height: 100px;
     width: 100px;
     cursor: pointer;
-    display: inline-flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-    margin: 2% 2% 2% 2%;
+    display: inline-block;
+    margin: 1% 3% 1% 3%;
 }
 
+.head-image {
+    background-image: url(../images/photos/JE_team_2.jpg);
+    display: none;
+}
+
+@media all and (max-width: 1570px) {
+	.row {
+		margin-left: 5%;
+		margin-right: 5%;
+	}
+}
+
+@media all and (max-width: 1400px) {
+    .image-holder {
+		margin: 1% 2% 1% 3%;
+    }
+}
+
+@media all and (max-width: 1270px) {
+    .image-holder {
+		margin: 1% 2% 1% 2%;
+    }
+}
+
+@media all and (max-width: 1150px) {
+	.row {
+		margin-left: 3%;
+		margin-right: 3%;
+	}
+    .image-holder {
+		margin: 1% 1% 1% 2%;
+    }
+}
+
+/* Ipad pro + desktops */
+@media all and (max-width: 1024px){
+	.row {
+		margin-left: 6%;
+		margin-right: 6%;
+	}
+    .image-holder {
+		margin: 1% 1% 1% 1%;
+    }
+}
+
+@media all and (max-width: 980px) {
+	.row {
+		margin-left: 2%;
+		margin-right: 2%;
+	}
+    .image-holder {
+		height: 90px;
+		width: 90px;
+		margin: 1% 2% 1% 2%;
+    }
+	.head-image {
+		transform: scale(100/90);
+	}
+}
+
+@media all and (max-width: 950px) {
+    .image-holder {
+		margin: 1% 2% 1% 1%;
+    }
+}
+
+@media all and (max-width: 900px) {
+    .image-holder {
+		margin: 1% 1% 1% 1%;
+    }
+}
+
+@media all and (max-width: 800px) {
+    .image-holder {
+		margin: 1% 1% 1% 0%;
+    }
+}
+
+/* Ipad / Tablets */
+@media all and (max-width: 768px) {
+	.row {
+		margin-left: 13%;
+		margin-right: 13%;
+	}
+    .image-holder {
+		height: 90px;
+		width: 90px;
+		margin: 2% 2% 1% 2%;
+    }
+	.head-image {
+		transform: scale(100/90);
+	}
+}
+
+/* All phones */
+@media all and (max-width: 450px) {
+	.row {
+		margin-left: 10%;
+		margin-right: 10%;
+	}
+    .image-holder {
+		height: 90px;
+		width: 90px;
+		margin: 2% 2% 1% 2%;
+    }
+	.head-image {
+		transform: scale(100/90);
+	}
+}
+
+
+.image-holder .head-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+}
 
 .image-holder .head-image {
     -webkit-filter: grayscale(100%);
@@ -86,13 +199,6 @@ header .intro-text .skills {
     -webkit-filter: grayscale(0%);
     filter: grayscale(0%)
 }
-
-.image-holder .head-image {
-    width: 100%;
-    height: 100%;
-    border-radius: 5%
-}
-
 
 .head-container {
     padding: 20px 50px;
@@ -113,63 +219,21 @@ header .intro-text .skills {
 .tooltip.top .tooltip-arrow {
     border-top-color: #f9423a
 }
+/* ----------------------------------------- */
 
-.head-image {
-    background-image: url(../images/photos/JE_team_2.jpg);
-    display: none;
-}
-
-.head-image.click {
-    display: block;
-    background-position-x: 1000px
-}
-
-.head-image.down {
-    display: block;
-    background-position-x: 900px
-}
-
-.head-image.downleft {
-    display: block;
-    background-position-x: 800px
-}
-
-.head-image.downright {
-    display: block;
-    background-position-x: 700px
-}
-
-.head-image.front {
-    display: block;
-    background-position-x: 600px
-}
-
-.head-image.left {
-    display: block;
-    background-position-x: 500px
-}
-
-.head-image.right {
-    display: block;
-    background-position-x: 400px
-}
-
-.head-image.up {
-    display: block;
-    background-position-x: 300px
-}
-
-.head-image.upleft {
-    display: block;
-    background-position-x: 200px
-}
-
+.head-image.click,
+.head-image.down,
+.head-image.downleft,
+.head-image.downright,
+.head-image.front,
+.head-image.left,
+.head-image.right,
+.head-image.up,
+.head-image.upleft,
 .head-image.upright {
     display: block;
-    background-position-x: 100px
 }
 
-/* Quando se fecha a info detalhada? */
 .head-info .close {
     font-size: 2em;
     margin: 10px;
