--- a/css/team.css
+++ b/css/team.css
@@ -60,8 +60,8 @@ header .intro-text .skills {
 
 
 .row {
-	margin-left: 10%;
-	margin-right: 10%;
+	margin-left: 20%;
+	margin-right: 20%;
 }
 
 .image-holder {
@@ -69,119 +69,13 @@ header .intro-text .skills {
     width: 100px;
     cursor: pointer;
     display: inline-block;
-    margin: 1% 3% 1% 3%;
+    margin: 1%;
 }
 
 .head-image {
     background-image: url(../images/photos/JE_team_2.jpg);
     display: none;
 }
-
-@media all and (max-width: 1570px) {
-	.row {
-		margin-left: 5%;
-		margin-right: 5%;
-	}
-}
-
-@media all and (max-width: 1400px) {
-    .image-holder {
-		margin: 1% 2% 1% 3%;
-    }
-}
-
-@media all and (max-width: 1270px) {
-    .image-holder {
-		margin: 1% 2% 1% 2%;
-    }
-}
-
-@media all and (max-width: 1150px) {
-	.row {
-		margin-left: 3%;
-		margin-right: 3%;
-	}
-    .image-holder {
-		margin: 1% 1% 1% 2%;
-    }
-}
-
-/* Ipad pro + desktops */
-@media all and (max-width: 1024px){
-	.row {
-		margin-left: 6%;
-		margin-right: 6%;
-	}
-    .image-holder {
-		margin: 1% 1% 1% 1%;
-    }
-}
-
-@media all and (max-width: 980px) {
-	.row {
-		margin-left: 2%;
-		margin-right: 2%;
-	}
-    .image-holder {
-		height: 90px;
-		width: 90px;
-		margin: 1% 2% 1% 2%;
-    }
-	.head-image {
-		transform: scale(100/90);
-	}
-}
-
-@media all and (max-width: 950px) {
-    .image-holder {
-		margin: 1% 2% 1% 1%;
-    }
-}
-
-@media all and (max-width: 900px) {
-    .image-holder {
-		margin: 1% 1% 1% 1%;
-    }
-}
-
-@media all and (max-width: 800px) {
-    .image-holder {
-		margin: 1% 1% 1% 0%;
-    }
-}
-
-/* Ipad / Tablets */
-@media all and (max-width: 768px) {
-	.row {
-		margin-left: 13%;
-		margin-right: 13%;
-	}
-    .image-holder {
-		height: 90px;
-		width: 90px;
-		margin: 2% 2% 1% 2%;
-    }
-	.head-image {
-		transform: scale(100/90);
-	}
-}
-
-/* All phones */
-@media all and (max-width: 450px) {
-	.row {
-		margin-left: 10%;
-		margin-right: 10%;
-	}
-    .image-holder {
-		height: 90px;
-		width: 90px;
-		margin: 2% 2% 1% 2%;
-    }
-	.head-image {
-		transform: scale(100/90);
-	}
-}
-
 
 .image-holder .head-image {
     width: 100%;
@@ -239,3 +133,110 @@ header .intro-text .skills {
     margin: 10px;
     text-shadow: none;
 }
+
+/* Resizing the grid ---------------------- */
+@media all and (max-width: 1570px) {
+	.row {
+		margin-left: 20%;
+		margin-right: 20%;
+	}
+}
+
+@media all and (max-width: 1400px) {
+    .image-holder {
+		margin: 1% 2% 1% 3%;
+    }
+}
+
+@media all and (max-width: 1270px) {
+    .image-holder {
+		margin: 1% 2% 1% 2%;
+    }
+}
+
+@media all and (max-width: 1150px) {
+	.row {
+		margin-left: 2%;
+		margin-right: 3%;
+	}
+    .image-holder {
+		margin: 1% 1% 1% 2%;
+    }
+}
+
+/* Ipad pro + desktops */
+@media all and (max-width: 1024px){
+	.row {
+		margin-left: 6%;
+		margin-right: 6%;
+	}
+    .image-holder {
+		margin: 1% 1% 1% 1%;
+    }
+}
+
+@media all and (max-width: 980px) {
+	.row {
+		margin-left: 2%;
+		margin-right: 2%;
+	}
+    .image-holder {
+		height: 90px;
+		width: 90px;
+		margin: 1% 2% 1% 2%;
+    }
+	.head-image {
+		transform: scale(90/100);
+	}
+}
+
+@media all and (max-width: 950px) {
+    .image-holder {
+		margin: 1% 2% 1% 1%;
+    }
+}
+
+@media all and (max-width: 900px) {
+    .image-holder {
+		margin: 1% 1% 1% 1%;
+    }
+}
+
+@media all and (max-width: 800px) {
+    .image-holder {
+		margin: 1% 1% 1% 0%;
+    }
+}
+
+/* Ipad / Tablets */
+@media all and (max-width: 768px) {
+	.row {
+		margin-left: 13%;
+		margin-right: 13%;
+	}
+    .image-holder {
+		height: 90px;
+		width: 90px;
+		margin: 2% 2% 1% 2%;
+    }
+	.head-image {
+		transform: scale(100/90);
+	}
+}
+
+/* All phones */
+@media all and (max-width: 450px) {
+	.row {
+		margin-left: 10%;
+		margin-right: 10%;
+	}
+    .image-holder {
+		height: 90px;
+		width: 90px;
+		margin: 2% 2% 1% 2%;
+    }
+	.head-image {
+		transform: scale(100/90);
+	}
+}
+/* ---------------------------------------- */
