--- a/css/test.css
+++ b/css/test.css
@@ -661,6 +661,7 @@ body input ~ div {
   transition: 0.5s ease-in-out 0.8s;
   -moz-transition: 0.5s ease-in-out 0.8s;
   -webkit-transition: 0.5s ease-in-out 0.8s;
+  overflow: hidden;
 }
 /*
 body input ~ div > ul {
@@ -696,6 +697,7 @@ body input:checked ~ div {
     transition: height 0.5s ease-in-out 0.2s;
     -moz-transition: height 0.5s ease-in-out 0.2s;
     -webkit-transition: height 0.5s ease-in-out 0.2s;
+	overflow: auto;
 }
 
 body input ~ div .new_section {
@@ -775,10 +777,10 @@ body input:checked ~ div .content-list{
 }
 
 body input ~ div .footnote {
-	position: absolute;
+	position: fixed;
 	width: 100%;
-	bottom: 0;
-	margin-bottom: 20px;
+	bottom: 0px;
+	height: 35px;
 	padding-left: 20px;
 	padding-right: 20px;
 	font-size: 10px;
@@ -786,6 +788,7 @@ body input ~ div .footnote {
 	text-align: center;
 	visibility: hidden;
 	opacity: 0;
+	background-color: #ff2100;
 	transition: 0.4s ease-in-out 0.2s;
 	-moz-transition: 0.4s ease-in-out 0.2s;
 	-webkit-transition: 0.4s ease-in-out 0.2s;
@@ -995,6 +998,7 @@ body input:checked ~ div .footnote {
     }
 }
 
+/* ERASE THIS MOTHERFUCKER */
 .list_artists {
     display: none;
     width: 100%;
@@ -1005,8 +1009,12 @@ body input:checked ~ div .footnote {
 /* -------------------------------- */
 
 
-
 .album {
+	display: none;
+	width: 100%;
+	position: relative;
+	top: 100%;
+	margin-top: 300px;
     margin-bottom: 100px;
 }
 
