--- a/css/test.css
+++ b/css/test.css
@@ -713,6 +713,7 @@ body input ~ div .new_section {
 	transition: 0.5s ease-in-out 0.6s;
 	-moz-transition: 0.5s ease-in-out 0.6s;
 	-webkit-transition: 0.5s ease-in-out 0.6s;
+
 }
 
 body input:checked ~ div .new_section {
@@ -889,7 +890,7 @@ body input:checked ~ div .footnote {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: #00c402;
+    background-color: #00A0E4;
 }
 
 .list_title {
