--- a/css/test.css
+++ b/css/test.css
@@ -432,7 +432,8 @@ main {
 .nav {
     position: fixed;
     width: 100%;
-    height: 80px;
+    min-height: 50px;
+    height: 10vh;;
     padding-top: 10px;
     z-index: 5;
 	visibility: hidden;
@@ -441,18 +442,41 @@ main {
 
 /* TEDxISTAlameda LOGO - svg */
 .nav_logo {
-    width: 40%;
-    height: 80%;
+    width: 100%;
+    height: auto;
+    min-height: 50px;
     display: inherit;
-    margin: 3px auto 0;
+    margin: 0.5vh;
     overflow: hidden;
     cursor: default !important; 
     text-align: center;
 	filter: blur(0px);
 }
 
+.logo-container {
+    width: 20%;
+    min-width: 256px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 0;
+    /* this formula makes sure the aspect ratio of the container equals that of the svg graphic 
+    padding-top: (svg height / svg width) * width-value;*/
+    padding-top: 4%;
+    position: relative;
+}
+
+@media(max-width:640px){
+   .logo-container {
+    float: left;
+    margin-left: 3vw;
+    margin-right: 0;
+}
+}
+
 .nav_logo-svg {
 	margin-top: 0px;
+    position: absolute;
+    top: 0; left: 0;
 }
 
 /* Hamburguer menu - svg */
@@ -518,11 +542,12 @@ body input:checked + label span:last-child {
 /* Close button from fullscreen / expandable view - svg */
 .nav_x {
     position: absolute;
-    top: -40%;
+    top: -60%;
     left: 10%;
     width: 26px;
     height: 26px;
     cursor: pointer;
+    z-index: 1000;
     transition: transform .2s ease-in-out;
 	-moz-transition: transform .2s ease-in-out;
 	-webkit-transition: transform .2s ease-in-out;
@@ -710,8 +735,8 @@ body input ~ div .new_section {
     color: #000 !important;
 	font-weight: 200;
 	letter-spacing: 1px;
-    text-align: center; 
-	margin-top: 2%;
+    text-align: center;
+    height: auto;
 	padding: 0;
 	opacity: 0;
 	transition: 0.5s ease-in-out 0.6s;
@@ -765,11 +790,13 @@ body input:checked ~ div .content-list{
 }
 
 .content {
-	position: absolute;
-	display: inline-grid;
-	width: 100%; 
+	position: fixed;
+	/*display: inline-grid;*/
+	width: 90vw;
+    height: 60vh; 
 	text-align: center;
-	margin-top: 20px;
+    bottom: 20vh;
+	margin: 0 5vw 0 5vw;
 	opacity: 0;
 	color: #FF2100;
 	transition: opacity 0.8s ease-in-out 0.1s;
@@ -779,6 +806,10 @@ body input:checked ~ div .content-list{
 
 .content_selected {
 	opacity: 1;
+}
+
+.content-text {
+    margin-top: 3vw;
 }
 
 body input ~ div .footnote {
