--- a/css/team.css
+++ b/css/team.css
@@ -217,14 +217,6 @@ header .intro-text .skills {
 } 
 /* ---------------------------------------- */
 
-
-.nav_container {
-    width: 100vw;
-    margin: 1vh 0 1vh 0;
-}
-
-
-
 .burguer-container {
     height: 0;
     width: 4%;
@@ -232,4 +224,8 @@ header .intro-text .skills {
     position: relative;
     float: right;
     
+}
+
+.overlay {
+    top: 10vh;
 }
