--- a/css/test.css
+++ b/css/test.css
@@ -946,6 +946,16 @@ body input:checked ~ div .footnote {
 	background-color: #e0e0e0;
 }
 
+.bg {
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    background: url("../images/photos/microphone.jpg") center no-repeat;
+	background-size: cover;
+	transform: scaleX(-1);
+	overflow: hidden;
+}
+
 .list_title {
     font-size: 85px;
     line-height: 1em;
@@ -956,7 +966,7 @@ body input:checked ~ div .footnote {
     top: 37%;
     margin-top: -210px;
 	margin-left: 0;
-    width: 60%;
+    width: 50%;
     text-align: left;
 }
 
@@ -1051,7 +1061,7 @@ body input:checked ~ div .footnote {
 	.list_blurb {
 		font-size: 20px;
 		width: 400px;
-		margin-top: 3%;
+		margin-top: 0%;
 	}
 }
 @media all and (min-width: 780px) {
@@ -1075,7 +1085,7 @@ body input:checked ~ div .footnote {
 	}
 	.list_blurb {
 		width: 450px;
-		margin-top: 4%;
+		margin-top: -3%;
 	}
 }
 @media all and (min-width: 1220px) {
@@ -1097,9 +1107,16 @@ body input:checked ~ div .footnote {
 	}
 	.list_blurb {
 		font-size: 24px;
-		margin-top: 2%;
+		margin-top: -6%;
 	}
 }
+@media all and (min-width: 1500px) {
+	.list_blurb {
+		font-size: 24px;
+		margin-top: 0%;
+	}
+}
+
 
 .list_header {
     position: absolute;
@@ -1148,6 +1165,16 @@ body input:checked ~ div .footnote {
 	height: 260px!important;
 	margin: 0px auto 40px auto;
 	top: 1240px;
+	overflow: hidden;
+}
+
+.item_section_news {
+	display: block;
+	position: relative;
+	width: 942px;
+	height: 100px; /* Dummy value */
+	margin: 0px auto 40px auto;
+	top: 1040px; 
 	overflow: hidden;
 }
 
@@ -2107,13 +2134,142 @@ body input:checked ~ div .footnote {
   }
 }
 
+/* SOCIAL MEDIA FEED -------------- */
+.container_news {
+  	display: inline-block;
+  	width: 100%;}
 
-.bg {
-	width: 100%;
-    height: 100%;
-    position: absolute;
-    background: url("../images/photos/microphone.jpg") center no-repeat;
-	background-size: cover;
-	transform: scaleX(-1);
-	overflow: hidden;
+.social-feed-element{
+    box-shadow: 0 0 10px 0 rgba(10, 10, 10, 0.2);
+    transition: 0.25s;
+    -webkit-backface-visibility: hidden;
+    background-color: #fff;
+    color: #333;
+    text-align:left;
+    font-size: 14px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 16px;
+	display: inline-block;
+    margin: 0 0 25px;
+    width: 100%;
 }
+
+.social-feed-element,
+.social-feed-element .blurb-body {
+    overflow: hidden;
+    zoom: 1;
+}
+
+.social-feed-element:hover{
+    box-shadow: 0 0 20px 0 rgba(10, 10, 10, 0.4);
+}
+
+.social-feed-container {
+	column-count: 2;
+	column-gap: 25px;
+ 	-moz-column-gap: 25px;
+ 	-webkit-column-gap: 25px;
+}
+
+.social-feed-element .top_news {
+	height: 80px;
+	padding: 15px 20px 15px 20px;
+	cursor:default;
+}
+
+.social-feed-element .media-object {
+    display: block;
+    width:50px;
+    border-radius:0%!important;
+	float: left;
+	margin-right: 15px;
+}
+
+.social-feed-element .author-news {
+	font-size: 15px;
+	color: #292929;
+	font-weight: 500;
+	margin-top: 7px;
+}
+
+.social-feed-element .time-news {
+	font-size: 13px;
+	color: #E0E0E0;
+	font-weight: 500;
+	margin-top: 3px;
+}
+
+.social-feed-element .icon-feed {
+	margin-top: -35px;
+	height: 40px;
+	width: 40px;
+	color: #005580;
+	float: right;
+}
+
+.social-feed-element .attachment {
+	margin-top: 15px;
+    vertical-align: middle;
+	width: 100%;
+	max-height: 400px;
+}
+
+.social-feed-element .content_news{
+	margin-top: -15px;
+    padding: 0px;
+}
+
+.social-feed-element .blurb-body {
+	height: auto;
+	min-height: 60px;
+	padding: 15px 20px 15px 20px;
+}
+
+.social-feed-element .blurb-body p{
+    color:#666;
+    line-height: 20px;
+}
+
+.social-feed-element .blurb-body p:hover{
+    text-decoration: none;
+	cursor: default;
+}
+
+.social-feed-element .blurb-body p.social-feed-text {
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+	color: #292929;
+}
+
+.social-feed-element a {
+    color: #0088cc;
+    text-decoration: none;
+}
+.social-feed-element a:hover,
+.social-feed-element a:active {
+    outline: 0;
+    color: #005580;
+    text-decoration: underline;
+}
+
+.facebook-icon {
+	height: 35px;
+	width: 35px;
+	background: url("../images/ui/facebook.svg") center / 35px 35px no-repeat;
+}
+
+.twitter-icon {
+	height: 35px;
+	width: 35px;
+	background: url("../images/ui/twitter.svg") center / 35px 35px no-repeat;
+}
+
+.instagram-icon {
+	height: 35px;
+	width: 35px;
+	background: url("../images/ui/instagram.svg") center / 35px 35px no-repeat;
+}
+/* -------------------------------- */
